PRL-4212 - Refactored hearings API to invoke only if needed for manage, draft & edit & approve orders