@@ -8,11 +8,17 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import uk.gov.hmcts.reform.authorisation.generators.AuthTokenGenerator;
 import uk.gov.hmcts.reform.prl.clients.HearingApiClient;
+import uk.gov.hmcts.reform.prl.models.Element;
+import uk.gov.hmcts.reform.prl.models.dto.ccd.CaseData;
+import uk.gov.hmcts.reform.prl.models.dto.ccd.HearingData;
+import uk.gov.hmcts.reform.prl.models.dto.ccd.HearingDataPrePopulatedDynamicLists;
 import uk.gov.hmcts.reform.prl.models.dto.hearingmanagement.NextHearingDetails;
 import uk.gov.hmcts.reform.prl.models.dto.hearings.CaseHearing;
 import uk.gov.hmcts.reform.prl.models.dto.hearings.CaseLinkedData;
 import uk.gov.hmcts.reform.prl.models.dto.hearings.CaseLinkedRequest;
+import uk.gov.hmcts.reform.prl.models.dto.hearings.HearingDaySchedule;
 import uk.gov.hmcts.reform.prl.models.dto.hearings.Hearings;
+import uk.gov.hmcts.reform.prl.services.HearingDataService;
 import uk.gov.hmcts.reform.prl.services.cafcass.RefDataService;
 
 import java.time.LocalDateTime;
@@ -21,8 +27,8 @@ import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
+import static org.apache.commons.collections.CollectionUtils.isNotEmpty;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.EMPTY_STRING;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.LISTED;
 import static uk.gov.hmcts.reform.prl.utils.ElementUtils.nullSafeCollection;
@@ -40,6 +46,8 @@ public class HearingService {
     private final HearingApiClient hearingApiClient;
 
     private final RefDataService refDataService;
+
+    private final HearingDataService hearingDataService;
 
     @Value("#{'${hearing_component.futureHearingStatus}'.split(',')}")
     private List<String> futureHearingStatusList;
@@ -66,8 +74,8 @@ public class HearingService {
                 }
 
                 List<CaseHearing> sortedByLatest = hearings.getCaseHearings().stream()
-                    .sorted(Comparator.comparing(CaseHearing::getNextHearingDate, Comparator.nullsLast(Comparator.naturalOrder()))).collect(
-                        Collectors.toList());
+                    .sorted(Comparator.comparing(CaseHearing::getNextHearingDate, Comparator.nullsLast(Comparator.naturalOrder())))
+                    .toList();
 
                 hearings.setCaseHearings(sortedByLatest);
             }
@@ -118,8 +126,8 @@ public class HearingService {
         LocalDateTime tempNextDateListed = null;
         if (hearing.getHmcStatus().equals(LISTED)) {
             Optional<LocalDateTime> minDateOfHearingDaySche = nullSafeCollection(hearing.getHearingDaySchedule()).stream()
-                .filter(u -> u.getHearingStartDateTime().isAfter(LocalDateTime.now()))
-                .map(u -> u.getHearingStartDateTime())
+                .map(HearingDaySchedule::getHearingStartDateTime)
+                .filter(hearingStartDateTime -> hearingStartDateTime.isAfter(LocalDateTime.now()))
                 .min(LocalDateTime::compareTo);
             if (minDateOfHearingDaySche.isPresent() && (tempNextDateListed == null || tempNextDateListed.isAfter(minDateOfHearingDaySche.get()))) {
                 tempNextDateListed = minDateOfHearingDaySche.get();
@@ -133,7 +141,7 @@ public class HearingService {
 
         LocalDateTime urgencyLimitDate = LocalDateTime.now().plusDays(5).plusMinutes(1).withNano(1);
         final List<String> hearingStatuses =
-            futureHearingStatusList.stream().map(String::trim).collect(Collectors.toList());
+            futureHearingStatusList.stream().map(String::trim).toList();
 
         boolean isInFutureHearingStatusList = hearingStatuses.stream()
             .anyMatch(
@@ -142,7 +150,7 @@ public class HearingService {
 
         return isInFutureHearingStatusList && hearing.getHmcStatus().equals(LISTED)
             && hearing.getHearingDaySchedule() != null
-            && hearing.getHearingDaySchedule().stream()
+            && !hearing.getHearingDaySchedule().stream()
             .filter(
                 hearDaySche ->
                     hearDaySche
@@ -156,8 +164,8 @@ public class HearingService {
                             .isBefore(
                                 urgencyLimitDate)
             )
-            .collect(Collectors.toList())
-            .size() > 0;
+            .toList()
+            .isEmpty();
 
     }
 
@@ -218,4 +226,23 @@ public class HearingService {
         return Collections.emptyList();
     }
 
+    public List<Element<HearingData>> getHearingDataFromExistingHearingData(String authorisation,
+                                                                                   List<Element<HearingData>> existingOrderHearingDetails,
+                                                                                   CaseData caseData) {
+        String caseReferenceNumber = String.valueOf(caseData.getId());
+        log.info("Inside common HearingService::updateExistingHearingData for {}", caseReferenceNumber);
+        if (isNotEmpty(existingOrderHearingDetails)) {
+            log.info("Existing hearing details are not empty");
+            Hearings hearings = this.getHearings(authorisation, caseReferenceNumber);
+            HearingDataPrePopulatedDynamicLists hearingDataPrePopulatedDynamicLists =
+                hearingDataService.populateHearingDynamicLists(authorisation, caseReferenceNumber, caseData, hearings);
+
+            return hearingDataService.getHearingData(
+                existingOrderHearingDetails,
+                hearingDataPrePopulatedDynamicLists,
+                caseData
+            );
+        }
+        return Collections.emptyList();
+    }
 }
